# LearnCmakeMakeFile

./: .gitignore  README.md
1.cmake/mDemo/: CMakeLists.txt
1.cmake/mDemo/src/: CMakeLists.txt
2.makefile/: Makefile  doc1.md  test.c
2.makefile/demo/: Makefile  test.c
mDemo/: CMakeLists.txt  config.h.in
mDemo/src/: main.c
mDemo/src/math/: CMakeLists.txt
